Click-and-draw canvas glitch fix, drag + shift to snap

--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,12 @@ body{
 }
 #drawlines{
 	position:absolute;
-	top:50px;
-	left:50px;
 	z-index:-1;
 
 }
 .cad-element, .cad{
 	position: absolute;
-	border:2px solid #000;
+	border:1px solid #000;
 	overflow:visible;
 	background:#ffd;
 }
@@ -28,14 +26,12 @@ body{
 }
 .cad-point{
 	border-color:blue;
-	width:5px;
-	height:5px;	
+	width:8px;
+	height:8px;	
 }
 .fc{
-	top:50px;
-	left:50px;
-	width:1500px;
-	height:1000px;
+	width:100%;
+	height:100%;
 	box-sizing: border-box;
 	background: transparent;
 }
@@ -60,10 +56,13 @@ body{
 }
 
 .cad:hover, .cad-element:hover{
-	border:2px solid #f00;
+	border:1px solid #f00;
 }
 .cad-root:hover{
-	border:2px solid #000;
+	border:1px solid #000;
+}
+.cad-canvas{
+	border:1px solid black;
 }
 .cad-canvas:hover ~ .cad-point{
 	opacity:1;
